2010-04-06 John Wu <John.Wu at ACM.org>
	* src/column.h, src/column.cpp: add an implementation of
	selectStrings
	* examples/tcapi.c: add call to fastbit_get_qualified_strings, add
	column type s

2010-04-05 John Wu <John.Wu at ACM.org>
	* src/capi.cpp, src/capi.h: add function
	fastbit_get_qualified_strings

2010-03-31 John Wu <John.Wu at ACM.org>
	* src/fileManager.cpp:963,964 the variable it should have been mit
	as Teryl Taylor pointed out

2010-03-04 John Wu <John.Wu at ACM.org>
	* src/mensa.cpp, src/filter.cpp: assign names through the long
	versions of the constructor for ibis::tabula and ibis::tabele as
	suggested by Andreas Streichardt
	* src/qExpr.h:52 Clarify the ownership of the nodes in a query
	expression tree.

2010-03-03 John Wu <John.Wu at ACM.org>
	* tests/Makefile.am: modify test case 2 of check-ibis to exercise
	the error caught by Andreas
	* src/selectClause.cpp:479y add code to prevent the checking of
	variable name "*"
	* src/whereClause.cpp:250 add check for variable name starting
	with *
	* src/selectClause.cpp:514 add check for the number of variables
	in bar, empty bar should be treated as no affecting the mask
	* src/filter.cpp: update the class function filt to work with
	select count(*) with an alias

2010-03-03 Andreas Streichardt <andreas.streichardt at globalpark.com>
	* src/tab.h: correct errors in the value returned by
	ibis::tabele::cursor

2010-02-28 John Wu <John.Wu at ACM.org>
	* INSTALL: update item 7 to mention Cray XT explicitly, add
	information about disabling attempts to build JNI library with the
	option --without-java

2010-02-25 John Wu <John.Wu at ACM.org>
	* doc/dataLoading.html: comment out the note about the restriction
	due to 32-bit offsets used in index files

2010-02-18 John Wu <John.Wu at ACM.org>
	* examples/ibis.cpp: change doQuaere to match the print out of
	doQuery
	* src/category.cpp:2753 add call to startPositions to make sure
	.sp file is up-to-date